...
        <ScrollView
            android:id="@+id/sv_contents"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_contents"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_upcoming"
                    android:layout_width="match_parent"
...
                    android:text="@string/upcoming"
                    android:textSize="@dimen/text_regular_3x"
                    android:textStyle="bold"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_upcoming"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/movie_list_height"
                    android:clipToPadding="false"
                    android:orientation="horizontal"
                    android:overScrollMode="never"
                    android:padding="@dimen/margin_medium"
...
