...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/ShapeAppearance.MaterialComponents.SmallComponent"
        tools:src="@drawable/ic_launcher_background" />

    <ImageButton
        android:id="@+id/btn_fav"
        android:layout_width="@dimen/icon_button_small"
        android:layout_height="@dimen/icon_button_small"
        android:layout_margin="@dimen/margin_medium"
        android:background="?attr/actionBarItemBackground"
        android:contentDescription="@string/default_button_description"
        android:src="@drawable/ic_favorite_border"
...
